--- a/src/App.css
+++ b/src/App.css
@@ -267,6 +267,32 @@ nav ul li:hover{
 #c8:hover{
   border: solid black 5px;
 }
+#c9{
+  width: 20%;
+  padding: 8%;
+  background-size: cover;
+  margin: 10px 45px;
+  border-radius: 20px;
+  border: solid 5px white;
+  background-image: url(./container/img/certificates/dark.jpeg);
+  cursor: pointer;
+}
+#c9:hover{
+  border: solid black 5px;
+}
+#c10{
+  width: 20%;
+  padding: 8%;
+  background-size: cover;
+  margin: 10px 30px;
+  border-radius: 20px;
+  border: solid 5px white;
+  background-image: url(./container/img/certificates/asses.jpeg);
+  cursor: pointer;
+}
+#c10:hover{
+  border: solid black 5px;
+}
 /*certificate end*/
 
 /*about start*/
